force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Second_Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Second_Token_ID__c</fullName>
    <description>The existing secondary token ID</description>
    <inlineHelpText>The existing secondary token ID</inlineHelpText>
    <label>Second Token ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>