force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__State__c.field-meta.xml
<CustomField>
    <fullName>Zuora__State__c</fullName>
    <description>The state portion of the customer&apos;s address.</description>
    <inlineHelpText>The state portion of the customer&apos;s address.</inlineHelpText>
    <label>State</label>
    <length>35</length>
    <type>Text</type>
</CustomField>