force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__StreetName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__StreetName__c</fullName>
    <description>The street name portion of the customer&apos;s address.</description>
    <inlineHelpText>The street name portion of the customer&apos;s address.</inlineHelpText>
    <label>Street Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>