force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__StreetNumber__c</fullName>
    <description>The street number of the customer&apos;s address.</description>
    <inlineHelpText>The street number of the customer&apos;s address.</inlineHelpText>
    <label>Street Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>