force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Token_ID__c</fullName>
    <description>The existing token ID</description>
    <inlineHelpText>The existing token ID</inlineHelpText>
    <label>Token ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>