force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__TotalNumberOfErrorPayments__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalNumberOfErrorPayments__c</fullName>
    <label>Total Number Of Error Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>