force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__TotalNumberOfProcessedPayments__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalNumberOfProcessedPayments__c</fullName>
    <description>The number of successful payments that have occurred using this payment method.</description>
    <inlineHelpText>The number of successful payments that have occurred using this payment method.</inlineHelpText>
    <label>Total Number Of Processed Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>