force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Type__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>ACH</fullName>
                
                
                    <label>ACH</label>
                
                </value>
            
                <value>
                
                    <fullName>BankTransfer</fullName>
                
                
                    <label>BankTransfer</label>
                
                </value>
            
                <value>
                
                    <fullName>Cash</fullName>
                
                
                    <label>Cash</label>
                
                </value>
            
                <value>
                
                    <fullName>Check</fullName>
                
                
                    <label>Check</label>
                
                </value>
            
                <value>
                
                    <fullName>CreditCard</fullName>
                
                
                    <label>CreditCard</label>
                
                </value>
            
                <value>
                
                    <fullName>CreditCardReferenceTransaction</fullName>
                
                
                    <label>CreditCardReferenceTransaction</label>
                
                </value>
            
                <value>
                
                    <fullName>DebitCard</fullName>
                
                
                    <label>DebitCard</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>PayPal</fullName>
                
                
                    <label>PayPal</label>
                
                </value>
            
                <value>
                
                    <fullName>WireTransfer</fullName>
                
                
                    <label>WireTransfer</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>