force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__UpdatedById__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UpdatedById__c</fullName>
    <description>Zuora user who last updated this Payment Method</description>
    <inlineHelpText>Zuora user who last updated this Payment Method</inlineHelpText>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>