force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UpdatedDate__c</fullName>
    <description>Zuora system automatically generates this date when the payment method is modified</description>
    <inlineHelpText>Zuora system automatically generates this date when the payment method is modified</inlineHelpText>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>