force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__UseDefaultRetryRule__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UseDefaultRetryRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Retry Rule</label>
    <type>Checkbox</type>
</CustomField>